tests/checker/bad/bad_adt_lib_4.scilla
scilla_version 0

import BadADTLib3b BadADTLib3c

(***************************************************)
(*               Associated library                *)
(***************************************************)

contract BadLib ()
